syntax = "proto3";
package relayer;

option go_package = "github.com/pell-chain/pellcore/x/relayer/types";

// store key is tss+chainid+nonce
message NonceToXmsg {
  int64 chain_id = 1;
  int64 nonce = 2;
  string xmsg_index = 3;
  string tss = 4;
}
